fixed styling for request history table and filters on smaller screens

--- a/server/frontend/src/components/Filters/Filters.module.scss
+++ b/server/frontend/src/components/Filters/Filters.module.scss
@@ -262,7 +262,7 @@
 				display: none;
 				font-size: 1rem;
 			}
-		}
+		}		
 
 		& .moreFilters {
 			display: none;
@@ -271,7 +271,16 @@
 }
 
 @media(min-width: 992px) and (max-width: 1800px) {
-	.Filters {		
+	.Filters {
+		& .popupFilterFileType {
+			top: -170px;
+			width: 80rem;
+
+			& fieldset {
+				margin-bottom: 0;
+			}
+		}
+		
 		&.expanded {
 			width: calc(100% - 20rem);
 			margin-left: 20rem;
