--- a/server/frontend/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.scss
+++ b/server/frontend/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.scss
@@ -78,10 +78,6 @@
 		& a {
 			padding-left: 5rem;
 
-			& div {
-				height: 80%;
-			}
-
 			& p {
 				font-size: 1rem;
 			}
