--- a/server/frontend/src/views/RequestHistory/RequestHistory.module.scss
+++ b/server/frontend/src/views/RequestHistory/RequestHistory.module.scss
@@ -4,11 +4,12 @@
 }
 
 .container {
-	max-height: 83rem;
+	height: 100%;
 	padding-top: 1rem;
 }
 
 .wrapTable {
+	height: 90%;
 	padding: 0 2.5rem;
 	transition: all 0.5s;
 
@@ -18,6 +19,11 @@
 		pointer-events: none;
 		transition: all 0.5s;
 	}
+}
+
+.tableContainer {
+	height: 100%;
+	overflow: hidden;
 }
 
 .main {
@@ -74,5 +80,13 @@
 
 	& .emptyTableCell {
 		text-align: center;
+	}
+}
+
+@media(min-width: 992px) and (max-width: 1800px) {
+	.table {
+		& th {
+			font-size: 1rem;
+		}
 	}
 }
